--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -145,7 +145,7 @@
   "mn60:23.8": "Und warum? ",
   "mn60:23.9": "Weil diese Asketen und Brahmanen nicht die nachteiligen Folgen untauglicher Eigenschaften sehen, die so schmutzig und unlauter sind, und die vorteilhaften Folgen tauglicher Eigenschaften, die läuternde Kraft der Entsagung. ",
   "mn60:24.1": "Und da es ein Kausalprinzip tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe kein Kausalprinzip, eine falsche Ansicht. ",
-  "mn60:24.2": "Da es das Kausalprinzip tatsächlich gibt, ist ihr Denken, es gebe kein Kausalprinzip, falsches Denken. ",
+  "mn60:24.2": "Da es ein Kausalprinzip tatsächlich gibt, ist ihr Denken, es gebe kein Kausalprinzip, falsches Denken. ",
   "mn60:24.3": "Da es das Kausalprinzip tatsächlich gibt, ist ihre Rede, es gebe kein Kausalprinzip, falsche Rede. ",
   "mn60:24.4": "Da es das Kausalprinzip tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe kein Kausalprinzip, jenen Vollendeten, die das Kausalprinzip lehren. ",
   "mn60:24.5": "Da es das Kausalprinzip tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe kein Kausalprinzip, davon, eine unwahre Lehre anzunehmen. ",
