Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -148,7 +148,7 @@
   "mn60:24.2": "Da es ein Kausalprinzip tatsächlich gibt, ist ihr Denken, es gebe kein Kausalprinzip, falsches Denken. ",
   "mn60:24.3": "Da es ein Kausalprinzip tatsächlich gibt, ist ihre Rede, es gebe kein Kausalprinzip, falsche Rede. ",
   "mn60:24.4": "Da es ein Kausalprinzip tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe kein Kausalprinzip, jenen Vollendeten, die ein Kausalprinzip lehren. ",
-  "mn60:24.5": "Da es das Kausalprinzip tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe kein Kausalprinzip, davon, eine unwahre Lehre anzunehmen. ",
+  "mn60:24.5": "Da es ein Kausalprinzip tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe kein Kausalprinzip, davon, eine unwahre Lehre anzunehmen. ",
   "mn60:24.6": "Und sie verherrlichen sich deshalb selbst und setzen andere herab. ",
   "mn60:24.7": "So geben sie ihr früheres sittliches Verhalten auf und sind in unmoralischem Verhalten verankert. ",
   "mn60:24.8": "Und so entstehen aufgrund von falscher Ansicht diese vielen schlechten, untauglichen Eigenschaften: falsche Ansicht, falsches Denken, falsche Rede, den Edlen widersprechen, andere überzeugen, unwahre Lehren anzunehmen, sowie sich selbst verherrlichen und andere herabsetzen. ",
