Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -154,7 +154,7 @@
   "mn60:24.8": "Und so entstehen aufgrund von falscher Ansicht diese vielen schlechten, untauglichen Eigenschaften: falsche Ansicht, falsches Denken, falsche Rede, den Edlen widersprechen, andere überzeugen, unwahre Lehren anzunehmen, sowie sich selbst verherrlichen und andere herabsetzen. ",
   "mn60:25.1": "Ein vernünftiger Mensch denkt darüber nach: ",
   "mn60:25.2": "‚Wenn es kein Kausalprinzip gibt, wird dieser Mensch, wenn sein Körper auseinanderbricht, sich Sicherheit verschaffen. ",
-  "mn60:25.3": "Aber wenn es das Kausalprinzip gibt, wird dieser Mensch, wenn sein Körper auseinanderbricht, nach dem Tod, an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle. ",
+  "mn60:25.3": "Aber wenn es ein Kausalprinzip gibt, wird dieser Mensch, wenn sein Körper auseinanderbricht, nach dem Tod, an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle. ",
   "mn60:25.4": "Aber gestehen wir zu, dass die, die sagen, es gebe kein Kausalprinzip, die Wahrheit sprächen. ",
   "mn60:25.5": "Dennoch wird dieser Mensch in diesem Leben von vernünftigen Menschen als ein unmoralischer Mensch mit falscher Ansicht getadelt, als einer, der das Kausalprinzip leugnet.‘ ",
   "mn60:25.6": "Aber wenn es das Kausalprinzip tatsächlich gibt, hat er eine Verliererhand auf beiden Seiten. ",
