Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -157,7 +157,7 @@
   "mn60:25.3": "Aber wenn es ein Kausalprinzip gibt, wird dieser Mensch, wenn sein Körper auseinanderbricht, nach dem Tod, an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle. ",
   "mn60:25.4": "Aber gestehen wir zu, dass die, die sagen, es gebe kein Kausalprinzip, die Wahrheit sprächen. ",
   "mn60:25.5": "Dennoch wird dieser Mensch in diesem Leben von vernünftigen Menschen als ein unmoralischer Mensch mit falscher Ansicht getadelt, als einer, der ein Kausalprinzip leugnet.‘ ",
-  "mn60:25.6": "Aber wenn es das Kausalprinzip tatsächlich gibt, hat er eine Verliererhand auf beiden Seiten. ",
+  "mn60:25.6": "Aber wenn es ein Kausalprinzip tatsächlich gibt, hat er eine Verliererhand auf beiden Seiten. ",
   "mn60:25.7": "Denn er wird in diesem Leben von vernünftigen Menschen getadelt, und wenn sein Körper auseinanderbricht, nach dem Tod, wird er an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle. ",
   "mn60:25.8": "Er hat diese unfehlbare Lehre falsch aufgenommen, sodass sie nur das erwünschte Ergebnis auf einer Seite umfasst und die taugliche Prämisse auslässt. ",
   "mn60:26.1": "Da das so ist, betrachten wir die Asketen und Brahmanen, die die Ansicht haben, ",
