--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -165,7 +165,7 @@
   "mn60:26.7": "Man kann erwarten, dass sie schlechtes Verhalten mit dem Körper, der Sprache und dem Geist verwerfen und gutes Verhalten mit dem Körper, der Sprache und dem Geist aufnehmen und befolgen. ",
   "mn60:26.8": "Und warum? ",
   "mn60:26.9": "Weil diese Asketen und Brahmanen die nachteiligen Folgen untauglicher Eigenschaften sehen, die so schmutzig und unlauter sind, und die vorteilhaften Folgen tauglicher Eigenschaften, die läuternde Kraft der Entsagung. ",
-  "mn60:27.1": "Und da es das Kausalprinzip tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe ein Kausalprinzip, rechte Ansicht. ",
+  "mn60:27.1": "Und da es ein Kausalprinzip tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe ein Kausalprinzip, rechte Ansicht. ",
   "mn60:27.2": "Da es das Kausalprinzip tatsächlich gibt, ist ihr Denken, es gebe ein Kausalprinzip, rechtes Denken. ",
   "mn60:27.3": "Da es das Kausalprinzip tatsächlich gibt, ist ihre Rede, es gebe ein Kausalprinzip, rechte Rede. ",
   "mn60:27.4": "Da es das Kausalprinzip tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe ein Kausalprinzip, nicht jenen Vollendeten, die das Kausalprinzip lehren. ",
