Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -168,7 +168,7 @@
   "mn60:27.1": "Und da es ein Kausalprinzip tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe ein Kausalprinzip, rechte Ansicht. ",
   "mn60:27.2": "Da es ein Kausalprinzip tatsächlich gibt, ist ihr Denken, es gebe ein Kausalprinzip, rechtes Denken. ",
   "mn60:27.3": "Da es ein Kausalprinzip tatsächlich gibt, ist ihre Rede, es gebe ein Kausalprinzip, rechte Rede. ",
-  "mn60:27.4": "Da es das Kausalprinzip tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe ein Kausalprinzip, nicht jenen Vollendeten, die das Kausalprinzip lehren. ",
+  "mn60:27.4": "Da es ein Kausalprinzip tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe ein Kausalprinzip, nicht jenen Vollendeten, die das Kausalprinzip lehren. ",
   "mn60:27.5": "Da es das Kausalprinzip tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe ein Kausalprinzip, davon, eine wahre Lehre anzunehmen. ",
   "mn60:27.6": "Und sie verherrlichen sich deshalb nicht selbst, noch setzen sie andere herab. ",
   "mn60:27.7": "So geben sie ihr früheres unmoralisches Verhalten auf und sind in sittlichem Verhalten verankert. ",
