Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -169,7 +169,7 @@
   "mn60:27.2": "Da es ein Kausalprinzip tatsächlich gibt, ist ihr Denken, es gebe ein Kausalprinzip, rechtes Denken. ",
   "mn60:27.3": "Da es ein Kausalprinzip tatsächlich gibt, ist ihre Rede, es gebe ein Kausalprinzip, rechte Rede. ",
   "mn60:27.4": "Da es ein Kausalprinzip tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe ein Kausalprinzip, nicht jenen Vollendeten, die ein Kausalprinzip lehren. ",
-  "mn60:27.5": "Da es das Kausalprinzip tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe ein Kausalprinzip, davon, eine wahre Lehre anzunehmen. ",
+  "mn60:27.5": "Da es ein Kausalprinzip tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe ein Kausalprinzip, davon, eine wahre Lehre anzunehmen. ",
   "mn60:27.6": "Und sie verherrlichen sich deshalb nicht selbst, noch setzen sie andere herab. ",
   "mn60:27.7": "So geben sie ihr früheres unmoralisches Verhalten auf und sind in sittlichem Verhalten verankert. ",
   "mn60:27.8": "Und so entstehen aufgrund von rechter Ansicht diese vielen tauglichen Eigenschaften: rechte Ansicht, rechtes Denken, rechte Rede, den Edlen nicht widersprechen, andere überzeugen, wahre Lehren anzunehmen, sowie sich nicht selbst verherrlichen oder andere herabsetzen. ",
