Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -173,7 +173,7 @@
   "mn60:27.6": "Und sie verherrlichen sich deshalb nicht selbst, noch setzen sie andere herab. ",
   "mn60:27.7": "So geben sie ihr früheres unmoralisches Verhalten auf und sind in sittlichem Verhalten verankert. ",
   "mn60:27.8": "Und so entstehen aufgrund von rechter Ansicht diese vielen tauglichen Eigenschaften: rechte Ansicht, rechtes Denken, rechte Rede, den Edlen nicht widersprechen, andere überzeugen, wahre Lehren anzunehmen, sowie sich nicht selbst verherrlichen oder andere herabsetzen. ",
-  "mn60:28.1": "Ein vernünftiger Mensch denkt darüber nach: ‚Wenn es das Kausalprinzip gibt, wird dieser Mensch, wenn sein Körper auseinanderbricht, nach dem Tod, an einem guten Ort wiedergeboren, in einer himmlischen Welt. ",
+  "mn60:28.1": "Ein vernünftiger Mensch denkt darüber nach: ‚Wenn es ein Kausalprinzip gibt, wird dieser Mensch, wenn sein Körper auseinanderbricht, nach dem Tod, an einem guten Ort wiedergeboren, in einer himmlischen Welt. ",
   "mn60:28.2": "Aber gestehen wir zu, dass die, die sagen, es gebe kein Kausalprinzip, die Wahrheit sprächen. ",
   "mn60:28.3": "Dennoch wird dieser Mensch in diesem Leben von vernünftigen Menschen als ein sittlicher Mensch mit rechter Ansicht gepriesen, der das Kausalprinzip vertritt.‘ ",
   "mn60:28.4": "Wenn es also das Kausalprinzip tatsächlich gibt, hat er eine perfekte Hand auf beiden Seiten. ",
