Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -176,7 +176,7 @@
   "mn60:28.1": "Ein vernünftiger Mensch denkt darüber nach: ‚Wenn es ein Kausalprinzip gibt, wird dieser Mensch, wenn sein Körper auseinanderbricht, nach dem Tod, an einem guten Ort wiedergeboren, in einer himmlischen Welt. ",
   "mn60:28.2": "Aber gestehen wir zu, dass die, die sagen, es gebe kein Kausalprinzip, die Wahrheit sprächen. ",
   "mn60:28.3": "Dennoch wird dieser Mensch in diesem Leben von vernünftigen Menschen als ein sittlicher Mensch mit rechter Ansicht gepriesen, der ein Kausalprinzip vertritt.‘ ",
-  "mn60:28.4": "Wenn es also das Kausalprinzip tatsächlich gibt, hat er eine perfekte Hand auf beiden Seiten. ",
+  "mn60:28.4": "Wenn es also ein Kausalprinzip tatsächlich gibt, hat er eine perfekte Hand auf beiden Seiten. ",
   "mn60:28.5": "Denn er wird in diesem Leben von vernünftigen Menschen gepriesen, und wenn sein Körper auseinanderbricht, nach dem Tod, wird er an einem guten Ort wiedergeboren, in einer himmlischen Welt. ",
   "mn60:28.6": "Er hat diese unfehlbare Lehre richtig aufgenommen, sodass sie das erwünschte Ergebnis auf beiden Seiten umfasst und die untaugliche Prämisse auslässt. ",
   "mn60:29.1": "Es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
