Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -9,5 +9,6 @@
   "iti104:2.8": "Tra i cercatori di questo tipo che servono, si accompagnano, e stanno vicini [a tale persona], se è incompleto di tutto l’insieme della moralità, del samādhi, della sapienza, della liberazione, della conoscenza e visione della liberazione, la porta a compimento tramite la coltivazione. ",
   "iti104:2.9": "Di questa qualità, i cercatori sono chiamati maestri, leader, che hanno abbandonato i conflitti, rimosso l’oscurità, portatori di luce, creatori di radiosità, portano la torcia,  creatori di luminosità, nobili, che hanno visione. ",
   "iti104:3.1": "La causa del creare la gioia (gaiezza), ",
-  "iti104:3.2": "è di quelli che conoscono "
+  "iti104:3.2": "è di quelli che conoscono ",
+  "iti104:3.3": "ovvero di quello che sono auto-sviluppati "
 }
