Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -10,5 +10,6 @@
   "iti104:2.9": "Di questa qualità, i cercatori sono chiamati maestri, leader, che hanno abbandonato i conflitti, rimosso l’oscurità, portatori di luce, creatori di radiosità, portano la torcia,  creatori di luminosità, nobili, che hanno visione. ",
   "iti104:3.1": "La causa del creare la gioia (gaiezza), ",
   "iti104:3.2": "è di quelli che conoscono ",
-  "iti104:3.3": "ovvero di quello che sono auto-sviluppati "
+  "iti104:3.3": "ovvero di quello che sono auto-sviluppati ",
+  "iti104:3.4": "Nobili, vivono di Dhamma, * "
 }
