--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -11,5 +11,6 @@
   "iti104:3.1": "La causa del creare la gioia (gaiezza), ",
   "iti104:3.2": "è di quelli che conoscono ",
   "iti104:3.3": "ovvero di quello che sono auto-sviluppati ",
-  "iti104:3.4": "Nobili, vivono di Dhamma, * "
+  "iti104:3.4": "Nobili, vivono di Dhamma, * ",
+  "iti104:4.1": "spiegano il buon Dhamma "
 }
