--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -12,5 +12,6 @@
   "iti104:3.2": "è di quelli che conoscono ",
   "iti104:3.3": "ovvero di quello che sono auto-sviluppati ",
   "iti104:3.4": "Nobili, vivono di Dhamma, * ",
-  "iti104:4.1": "rendono chiaro il buon Dhamma "
+  "iti104:4.1": "rendono chiaro il buon Dhamma ",
+  "iti104:4.2": "portatori di luce che illuminano "
 }
