--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -13,5 +13,6 @@
   "iti104:3.3": "ovvero di quello che sono auto-sviluppati ",
   "iti104:3.4": "Nobili, vivono di Dhamma, * ",
   "iti104:4.1": "rendono chiaro il buon Dhamma ",
-  "iti104:4.2": "creatori di luminosità che illuminano "
+  "iti104:4.2": "creatori di luminosità che illuminano ",
+  "iti104:4.3": "portatori di luce saggi "
 }
