--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -16,5 +16,6 @@
   "iti104:4.2": "creatori di luminosità che illuminano ",
   "iti104:4.3": "portatori di luce saggi ",
   "iti104:4.4": "dotati di visione, che hanno abbandonato il conflitto. ",
-  "iti104:5.1": "per chiunque avendo ascoltato l’insegnamento "
+  "iti104:5.1": "per chiunque avendo ascoltato l’insegnamento ",
+  "iti104:5.2": "comprendendo perfettamente, * "
 }
