--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -17,5 +17,6 @@
   "iti104:4.3": "portatori di luce saggi ",
   "iti104:4.4": "dotati di visione, che hanno abbandonato il conflitto. ",
   "iti104:5.1": "per chiunque avendo ascoltato l’insegnamento ",
-  "iti104:5.2": "comprendendo perfettamente, * "
+  "iti104:5.2": "comprendendo perfettamente, * ",
+  "iti104:5.3": "* "
 }
