--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti104:2.6": "seguire quel cercatore è di grande aiuto per voi. ",
   "iti104:2.7": "Perchè questo? ",
   "iti104:2.8": "I cercatori che servono persone di questo tipo, si accompagnano, e stanno vicini [a tale persona], se sono incompleti di tutto l’insieme della moralità, del samādhi, della sapienza, della liberazione, della conoscenza e visione della liberazione, la portano a compimento tramite la coltivazione. ",
-  "iti104:2.9": "Cercatori di questo tipo sono chiamati maestri, leader, che hanno abbandonato i conflitti, rimosso l’oscurità, portatori di luce, creatori di radiosità, portano la torcia,  creatori di luminosità, nobili, che hanno visione. ",
+  "iti104:2.9": "Cercatori di questo tipo sono chiamati maestri, capi, che hanno abbandonato i conflitti, rimosso l’oscurità, portatori di luce, creatori di radiosità, portano la torcia,  creatori di luminosità, nobili, che hanno visione. ",
   "iti104:3.1": "La causa del creare la gioia (gaiezza), ",
   "iti104:3.2": "è di quelli che conoscono ",
   "iti104:3.3": "ovvero di quello che sono auto-sviluppati ",
