Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
@@ -1,4 +1,4 @@
 {
-  "iti105:2.1": "Queste quattro cose fanno sorgere l’arsura, ovunque l’arsura di un cercatore sorgendo sorge. ",
+  "iti105:2.1": "Queste quattro cose fanno sorgere l’arsura, ovunque l’arsura di un cercatore prende forma e viene a galla. ",
   "iti105:2.2": "Quali quattro? "
 }
