--- a/translation/de/sabbamitta/sutta/sn/sn14/sn14.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn14/sn14.19_translation-de-sabbamitta.json
@@ -7,5 +7,5 @@
   "sn14.19:1.3": "die Gewissenlosen mit den Gewissenlosen, die ohne Zurückhaltung mit denen ohne Zurückhaltung, die Geistlosen mit den Geistlosen, die mit einem Gewissen mit denen mit einem Gewissen, die Zurückhaltenden mit den Zurückhaltenden und die Weisen mit den Weisen. ",
   "sn14.19:2.1": "… die Gewissenlosen … die Ungebildeten … die Geistlosen … die mit einem Gewissen … die Gebildeten … die Weisen … ",
   "sn14.19:3.1": "… die Gewissenlosen … die Trägen … die Geistlosen … die mit einem Gewissen … die Energischen … die Weisen … ",
-  "sn14.19:4.1": "… die Gewissenlosen … die Unachtsamen … die Geistlosen … die Gewissenhaften … die Achtsamen mit den Achtsamen und die Weisen mit den Weisen.“ "
+  "sn14.19:4.1": "… die Gewissenlosen … die Unachtsamen … die Geistlosen … die mit einem Gewissen … die Achtsamen mit den Achtsamen und die Weisen mit den Weisen.“ "
 }
