Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
@@ -2,5 +2,5 @@
   "iti105:2.1": "Queste quattro cose fanno sorgere l’arsura, ovunque l’arsura di un cercatore prende forma e viene a galla. ",
   "iti105:2.2": "Quali quattro? ",
   "iti105:2.3": "A causa del saio, ",
-  "iti105:2.4": "della questua, "
+  "iti105:2.4": "della cibo della questua, "
 }
