Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
@@ -4,5 +4,6 @@
   "iti105:2.3": "A causa del saio, ",
   "iti105:2.4": "a causa della questua, ",
   "iti105:2.5": "a causa dell’alloggio, ",
-  "iti105:2.6": "a causa di questo o quest’altro stato di esistenza, "
+  "iti105:2.6": "a causa di questo o quest’altro stato di esistenza, ",
+  "iti105:3.1": "“Una persona accompagnata dall’arsura, ** "
 }
