--- a/translation/de/sabbamitta/sutta/an/an8/an8.23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.23_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an8.23:1.4": "Welche sieben? ",
   "an8.23:1.5": "Er ist vertrauensvoll ",
   "an8.23:1.6": "und sittlich, ",
-  "an8.23:1.7": "gewissenhaft, ",
+  "an8.23:1.7": "hat ein Gewissen, ",
   "an8.23:1.8": "zurückhaltend, ",
   "an8.23:1.9": "gelehrt, ",
   "an8.23:1.10": "großzügig ",
