--- a/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
@@ -7,5 +7,6 @@
   "iti105:2.6": "a causa di questo o quest’altro stato di esistenza, ",
   "iti105:3.1": "“Una persona accompagnata dall’arsura, ** ",
   "iti105:3.2": "* ",
-  "iti105:3.3": "* "
+  "iti105:3.3": "* ",
+  "iti105:3.4": "* "
 }
