Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
@@ -9,5 +9,6 @@
   "iti105:3.2": "* ",
   "iti105:3.3": "* ",
   "iti105:3.4": "* ",
-  "iti105:4.1": "* "
+  "iti105:4.1": "* ",
+  "iti105:4.2": "* "
 }
