Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.23_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.23_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "an8.23:3.2": "Welche sieben? ",
   "an8.23:3.3": "Er sagte, du seist vertrauensvoll ",
   "an8.23:3.4": "und sittlich, ",
-  "an8.23:3.5": "gewissenhaft, ",
+  "an8.23:3.5": "habest ein Gewissen, ",
   "an8.23:3.6": "zurückhaltend, ",
   "an8.23:3.7": "gelehrt, ",
   "an8.23:3.8": "großzügig ",
