Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -1,4 +1,4 @@
 {
-  "iti106:2.1": "Inclusi gli dei, quelle famiglie rispettabili di qualsiasi i genitori sono onorati in casa dai figli ",
+  "iti106:2.1": "Incluso nel mondo di Brahma, quelle famiglie rispettabili di qualsiasi i genitori sono onorati in casa dai figli ",
   "iti106:2.2": "Con gli dei anziani... "
 }
