Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -2,5 +2,6 @@
   "iti106:2.1": "Sia nel mondo di Brahma, quelle famiglie rispettabili di qualsiasi i genitori sono onorati in casa dai figli ",
   "iti106:2.2": "Con gli dei anziani... ",
   "iti106:2.3": "i primi insegnanti ",
-  "iti106:2.4": "con quelli degni di offerte "
+  "iti106:2.4": "con quelli degni di offerte ",
+  "iti106:3.1": "‘Brahmā’ è sinonimo di madre e padre. "
 }
