--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti106:2.1": "Vivono con Brahma, quelle famiglie di qualsiasi i genitori sono onorati in casa dai figli ",
+  "iti106:2.1": "Vivono con Brahma quelle famiglie in cui i genitori sono onorati in casa dai figli. ",
   "iti106:2.2": "Con gli dei anziani... ",
   "iti106:2.3": "i primi insegnanti ",
   "iti106:2.4": "con quelli degni di offerte ",
