--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti106:2.1": "Vivono con Brahma quelle famiglie in cui i genitori sono onorati in casa dai figli. ",
   "iti106:2.2": "Vivono con gli antichi dei... ",
   "iti106:2.3": "Vivono con i primi insegnanti.. ",
-  "iti106:2.4": "Vivono con quelli degni di offerte ",
+  "iti106:2.4": "Vivono con quelli degni di offerte.. ",
   "iti106:3.1": "‘Brahmā’ è sinonimo di madre e padre. ",
   "iti106:3.5": "Perchè questo? ",
   "iti106:3.6": "Madre e padre sono molto utili ai figli, li crescono, nutrono e li guidano in questo mondo. "
