Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti106:3.3": "..i primi insegnanti.. ",
   "iti106:3.4": "..quelli degni di offerte.. ",
   "iti106:3.5": "Perchè questo? ",
-  "iti106:3.6": "Madre e padre sono molto utili ai figli, li crescono, nutrono e li guidano in questo mondo. "
+  "iti106:3.6": "Madre e padre sono molto utili ai figli, li crescono, nutrono e li guidano in questo mondo. ",
+  "iti106:4.1": "Madre e padre sono detti Brahma, "
 }
