--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -10,5 +10,6 @@
   "iti106:3.5": "Perchè questo? ",
   "iti106:3.6": "Madre e padre sono molto utili ai figli, li crescono, nutrono e li guidano in questo mondo. ",
   "iti106:4.1": "Madre e padre sono detti Brahma, ",
-  "iti106:4.2": "primi insegnanti, "
+  "iti106:4.2": "primi insegnanti, ",
+  "iti106:4.3": "degni di offerte dai figli "
 }
