--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -12,5 +12,5 @@
   "iti106:4.1": "Madre e padre sono detti Brahma, ",
   "iti106:4.2": "primi insegnanti, ",
   "iti106:4.3": "degni di offerte dai figli ",
-  "iti106:4.4": "compassionevoli con la progenie. "
+  "iti106:4.4": "compassionevoli con la prole. "
 }
