--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -13,5 +13,6 @@
   "iti106:4.2": "primi insegnanti, ",
   "iti106:4.3": "degni di offerte dai figli ",
   "iti106:4.4": "compassionevoli con la prole. ",
-  "iti106:5.1": "Per questo il saggio gli renderebbe omaggio (venerarli) "
+  "iti106:5.1": "Per questo il saggio gli renderebbe omaggio (venerarli) ",
+  "iti106:5.2": "e li rispetterebbe "
 }
