Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -17,6 +17,6 @@
   "iti106:5.2": "e li tratterebbe con rispetto ",
   "iti106:5.3": "con cibo, bevande, ",
   "iti106:5.4": "tessuto, e alloggio, ",
-  "iti106:5.5": "con massaggi, bagni, ",
+  "iti106:5.5": "con massaggi, lavaggi, ",
   "iti106:5.6": "e bagni ai piedi "
 }
