--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -18,5 +18,6 @@
   "iti106:5.3": "con cibo, bevande, ",
   "iti106:5.4": "tessuto, e alloggio, ",
   "iti106:5.5": "con massaggi, lavaggi, ",
-  "iti106:5.6": "e bagni ai piedi. "
+  "iti106:5.6": "e bagni ai piedi. ",
+  "iti106:6.1": "Con questo servizio "
 }
