--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -19,6 +19,6 @@
   "iti106:5.4": "tessuto, e alloggio, ",
   "iti106:5.5": "con massaggi, lavaggi, ",
   "iti106:5.6": "e bagni ai piedi. ",
-  "iti106:6.1": "Con questo servizio ",
+  "iti106:6.1": "Di questo servizio ",
   "iti106:6.2": "a madre e padre, i saggi "
 }
