--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti106:2.2": "con gli antichi Dei, ",
   "iti106:2.3": "con i primi insegnanti, ",
   "iti106:2.4": "con quelli degni di offerte. ",
-  "iti106:3.1": "‘Brahmā’ è sinonimo di madre e padre. ",
+  "iti106:3.1": "‘Brahmā’, ",
   "iti106:3.2": "..gli antichi Dei.. ",
   "iti106:3.3": "..i primi insegnanti.. ",
   "iti106:3.4": "..quelli degni di offerte.. ",
