--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti106:2.4": "con quelli degni di offerte. ",
   "iti106:3.1": "‘Brahmā’, ",
   "iti106:3.2": "‘gli antichi Dei’, ",
-  "iti106:3.3": "..i primi insegnanti.. ",
+  "iti106:3.3": "‘i primi insegnanti’, ",
   "iti106:3.4": "..quelli degni di offerte.. ",
   "iti106:3.5": "Perchè questo? ",
   "iti106:3.6": "Madre e padre sono molto utili ai figli, li crescono, nutrono e li guidano in questo mondo. ",
