--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti106:3.2": "‘gli antichi Dei’, ",
   "iti106:3.3": "‘i primi insegnanti’, ",
   "iti106:3.4": "‘quelli degni di offerte’ sono tutti sinonimi di madre e padre. ",
-  "iti106:3.5": "Perchè questo? ",
+  "iti106:3.5": "Perché questo? ",
   "iti106:3.6": "Perché madre e padre sono molto utili ai figli, li crescono, nutrono e li guidano in questo mondo. ",
   "iti106:4.1": "Madre e padre sono detti Brahma, ",
   "iti106:4.2": "primi insegnanti, ",
