--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti106:3.6": "Perché madre e padre sono molto utili ai figli, li crescono, nutrono e li guidano in questo mondo. ",
   "iti106:4.1": "Madre e padre sono detti Brahma, ",
   "iti106:4.2": "i primi insegnanti, ",
-  "iti106:4.3": "degni di offerte dai figli ",
+  "iti106:4.3": "degni di offerte dai figli, ",
   "iti106:4.4": "compassionevoli con la prole. ",
   "iti106:5.1": "Per questo il saggio gli renderebbe omaggio (venerarli) ",
   "iti106:5.2": "e li tratterebbe con rispetto ",
