Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti106:4.3": "degni di offerte dai figli, ",
   "iti106:4.4": "compassionevoli con la prole. ",
   "iti106:5.1": "Per questo il saggio li rispetterebbe ",
-  "iti106:5.2": "e li tratterebbe con rispetto ",
+  "iti106:5.2": "e gli offrirebbe ",
   "iti106:5.3": "con cibo, bevande, ",
   "iti106:5.4": "tessuto, e alloggio, ",
   "iti106:5.5": "con massaggi, lavaggi, ",
