Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti106:2.1": "Quelle famiglie in cui i genitori sono onorati in casa dai figli, vivono con Brahma, ",
+  "iti106:2.1": "Le famiglie in cui i genitori sono onorati in casa dai figli, vivono con Brahma, ",
   "iti106:2.2": "con gli antichi Dei, ",
   "iti106:2.3": "con i primi insegnanti, ",
   "iti106:2.4": "con quelli degni di offerte. ",
