--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -17,7 +17,7 @@
   "iti106:5.2": "e li tratterebbe con rispetto, ",
   "iti106:5.3": "con cibo, bevande, ",
   "iti106:5.4": "tessuto, alloggio, ",
-  "iti106:5.5": "con massaggi, lavaggi, ",
+  "iti106:5.5": "massaggi, lavaggi, ",
   "iti106:5.6": "e bagni ai piedi. ",
   "iti106:6.1": "Con questo servizio ",
   "iti106:6.2": "a madre e padre, i saggi ",
