Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -21,6 +21,6 @@
   "iti106:5.6": "e bagni ai piedi. ",
   "iti106:6.1": "Per via della loro cura ",
   "iti106:6.2": "a madre e padre, i saggi ",
-  "iti106:6.3": "li lodano in questa vita, ",
+  "iti106:6.3": "lo lodano in questa vita, ",
   "iti106:6.4": "le delizie dell’aldilà. "
 }
