--- a/translation/de/sabbamitta/sutta/an/an6/an6.45_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.45_translation-de-sabbamitta.json
@@ -77,7 +77,7 @@
   "an6.45:23.1": "Geradeso gilt in der Schulung des Edlen ",
   "an6.45:23.2": "jeder, der im Vertrauen verankert ist, ",
   "an6.45:23.3": "der ein Gewissen hat und zurückhaltend ist, ",
-  "an6.45:23.4": "weise und sittlich gezügelt ist, ",
+  "an6.45:23.4": "weise und sittlich gezügelt, ",
   "an6.45:24.1": "als einer, der glücklich lebt ",
   "an6.45:24.2": "in der Schulung des Edlen. ",
   "an6.45:24.3": "Nachdem er nicht mit dem Fleischlichen verbundene Seligkeit erfahren, ",
