Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -22,5 +22,5 @@
   "iti106:6.1": "Per via della sua cura ",
   "iti106:6.2": "a madre e padre, i saggi ",
   "iti106:6.3": "lo lodano in questa vita, ",
-  "iti106:6.4": "le delizie dell’aldilà. "
+  "iti106:6.4": "e poi si gode le delizie dell’aldilà. "
 }
