--- a/translation/de/sabbamitta/sutta/an/an8/an8.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.24_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "an8.24:2.4": "Welche acht? ",
   "an8.24:2.5": "Er ist vertrauensvoll ",
   "an8.24:2.6": "und sittlich, ",
-  "an8.24:2.7": "gewissenhaft, ",
+  "an8.24:2.7": "hat ein Gewissen, ",
   "an8.24:2.8": "zurückhaltend, ",
   "an8.24:2.9": "gelehrt, ",
   "an8.24:2.10": "großzügig, ",
