--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -1,3 +1,3 @@
 {
-  "iti107:2.1": "Cercatori, i bramini e laici sono molto utili a voi tutti e vi offrono sai, questua, alloggi, medicine e tonici. "
+  "iti107:2.1": "Cercatori, i bramini e laici sono vi molto utili e vi sostengono con offerte di sai, questua, alloggi, medicine e tonici. "
 }
