--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "iti107:2.1": "Cercatori, i bramini e laici sono vi molto utili e vi sostengono con offerte di stoffa, questua, alloggi, medicine e tonici. "
+  "iti107:2.1": "Cercatori, i bramini e laici sono vi molto utili e vi sostengono con offerte di stoffa, questua, alloggi, medicine e tonici. ",
+  "iti107:2.2": "E anche voi siete molto utili ai bramini e ai laici, perché gli insegnate un Dhamma che è bello all’inizio, durante, e dopo, sia nel significato che nella forma, e rivela un tipo di vita spirituale completamente perfetta e pura. "
 }
