--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -4,5 +4,6 @@
   "iti107:2.3": "Così questo dipendere l’uno con l’altro è vissuto sotto la vita spirituale per attraversare il diluvio e mettere una fine al dukkha una volta per tutte. ",
   "iti107:3.1": "Quelli che vivono con una casa, o senza casa, ",
   "iti107:3.2": "entrambi dipendono l’uno dall’altro, ",
-  "iti107:3.3": "hanno successo nel buon Dhamma, "
+  "iti107:3.3": "hanno successo nel buon Dhamma, ",
+  "iti107:3.4": "suprema liberazione da ogni giogo** "
 }
