--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti107:3.1": "Quelli che vivono con una casa, o senza casa, ",
   "iti107:3.2": "entrambi dipendono l’uno dall’altro, ",
   "iti107:3.3": "hanno successo nel buon Dhamma, ",
-  "iti107:3.4": "suprema liberazione da ogni giogo** "
+  "iti107:3.4": "suprema liberazione da ogni giogo** ",
+  "iti107:4.3": "I senza casa accettano "
 }
