--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -6,5 +6,6 @@
   "iti107:3.2": "entrambi dipendono l’uno dall’altro, ",
   "iti107:3.3": "hanno successo nel buon Dhamma, ",
   "iti107:3.4": "suprema liberazione da ogni giogo** ",
+  "iti107:4.1": "Da quelli con una casa ",
   "iti107:4.3": "I senza casa accettano "
 }
