--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -8,5 +8,5 @@
   "iti107:3.4": "suprema liberazione da ogni giogo** ",
   "iti107:4.1": "Da quelli con una casa, il saio, ",
   "iti107:4.2": "i requisiti, e l’alloggio, ",
-  "iti107:4.3": "I senza casa accettano "
+  "iti107:4.3": "i senza casa accettano "
 }
