Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -9,5 +9,6 @@
   "iti107:4.1": "Da quelli con una casa, il saio, ",
   "iti107:4.2": "i requisiti, e l’alloggio, ",
   "iti107:4.3": "i senza casa accettano ",
-  "iti107:4.4": "rimuovendo il pericolo "
+  "iti107:4.4": "rimuovendo il pericolo ",
+  "iti107:5.1": "fortunato nel dipendere "
 }
