--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -11,5 +11,6 @@
   "iti107:4.3": "i senza casa accettano ",
   "iti107:4.4": "rimuovendo il pericolo ",
   "iti107:5.1": "fortunato nel dipendere ",
-  "iti107:5.2": "dal laico per cercare una casa/tetto "
+  "iti107:5.2": "dal laico per cercare una casa/tetto ",
+  "iti107:5.3": "Quelli che hanno fede negli arahant "
 }
