--- a/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
@@ -116,7 +116,7 @@
   "mn51:13.5": "Es ist nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. ",
   "mn51:13.6": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
   "mn51:13.7": "Nach einiger Zeit gibt er ein großes oder kleines Vermögen auf, verlässt einen großen oder kleinen Familienkreis. Er rasiert sich Haar und Bart, legt ockerfarbene Roben an und zieht aus dem Haus fort ins hauslose Leben. ",
-  "mn51:14.1": "Wenn er fortgezogen ist, nimmt er die Schulung und die Lebensweise der Mönche und Nonnen auf. Er gibt das Töten lebender Geschöpfe auf und tötet nicht mehr. Er verzichtet auf Stock und Schwert. Er ist gewissenhaft und gütig und lebt voller Anteilnahme für alle Lebewesen. ",
+  "mn51:14.1": "Wenn er fortgezogen ist, nimmt er die Schulung und die Lebensweise der Mönche und Nonnen auf. Er gibt das Töten lebender Geschöpfe auf und tötet nicht mehr. Er verzichtet auf Stock und Schwert. Er ist einfühlsam und gütig und lebt voller Anteilnahme für alle Lebewesen. ",
   "mn51:14.2": "Er gibt das Stehlen auf und stiehlt nicht mehr. Er nimmt nur, was gegeben wird, erwartet nur, was gegeben wird. Er hält sich selbst rein, indem er nicht stiehlt. ",
   "mn51:14.3": "Er gibt unkeusches Verhalten auf und ist keusch. Er lebt abgesondert und vermeidet den vulgären Akt des Geschlechtsverkehrs. ",
   "mn51:14.4": "Er gibt das Lügen auf und lügt nicht mehr. Er sagt die Wahrheit und hält sich an die Wahrheit. Er ist ehrlich und vertrauenswürdig und legt die Welt nicht mit seinen Worten herein. ",
