Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -12,5 +12,6 @@
   "iti107:4.4": "rimuovendo il pericolo ",
   "iti107:5.1": "fortunato nel dipendere ",
   "iti107:5.2": "dal laico per cercare una casa/tetto ",
-  "iti107:5.3": "Quelli che hanno fede negli arahant "
+  "iti107:5.3": "Quelli che hanno fede negli arahant ",
+  "iti107:5.4": "contemplando la nobile saggezza "
 }
