--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -87,7 +87,7 @@
   "dn16:1.8.1": "Solange diese sieben Grundsätze, die den Niedergang verhindern, unter den Mönchen und Nonnen Bestand haben und solange man sieht, dass die Mönche und Nonnen danach handeln, können sie Wachstum erwarten, keinen Niedergang. ",
   "dn16:1.8.2": "Ich will euch sieben weitere Grundsätze lehren, die den Niedergang verhindern. … ",
   "dn16:1.8.3": "Solange die Mönche und Nonnen vertrauensvoll sind … ",
-  "dn16:1.8.4": "solange sie gewissenhaft … ",
+  "dn16:1.8.4": "solange sie ein Gewissen haben … ",
   "dn16:1.8.5": "zurückhaltend … ",
   "dn16:1.8.6": "gelehrt … ",
   "dn16:1.8.7": "energisch … ",
