Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -14,5 +14,5 @@
   "iti107:5.2": "dal laico per cercare una casa/tetto ",
   "iti107:5.3": "Quelli che hanno fede negli arahant ",
   "iti107:5.4": "contemplando la nobile saggezza?? ",
-  "iti107:6.1": "in cammino in questo Dhamma "
+  "iti107:6.1": "in cammino qui nel Dhamma "
 }
