Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti107:2.1": "Cercatori, bramini e laici vi sono molto utili e vi sostengono con offerte di stoffa, cibo, alloggi, medicine, tonici e altri requisiti. ",
   "iti107:2.2": "Anche voi siete molto utili ai bramini e ai laici, perché gli insegnate un Dhamma che è bello all’inizio, durante, e dopo, sia nel significato che nella forma, e rivela un tipo di vita spirituale completamente perfetta e pura. ** ",
   "iti107:2.3": "In questo modo si vive la vita spirituale, appoggiandosi gli uni agli altri, per attraversare il diluvio e mettere una fine al dukkha una volta per tutte. ",
-  "iti107:3.1": "Quelli che vivono con una casa, o senza casa, ",
+  "iti107:3.1": "Sia che vivono con una casa, o senza casa, ",
   "iti107:3.2": "entrambi dipendono l’uno dall’altro, ",
   "iti107:3.3": "hanno successo nel buon Dhamma, ",
   "iti107:3.4": "suprema liberazione da ogni giogo** ",
