Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti107:2.3": "In questo modo si vive la vita spirituale, appoggiandosi gli uni agli altri, per attraversare il diluvio e mettere una fine al dukkha una volta per tutte. ",
   "iti107:3.1": "Sia che vivono con una casa, o senza casa, ",
   "iti107:3.2": "entrambi dipendono l’uno dall’altro, ",
-  "iti107:3.3": "hanno successo nel buon Dhamma, ",
+  "iti107:3.3": "e hanno successo nel buon Dhamma, ",
   "iti107:3.4": "suprema liberazione da ogni giogo** ",
   "iti107:4.1": "Da quelli con una casa, il saio, ",
   "iti107:4.2": "i requisiti, e l’alloggio, ",
